<resources>
    <string name="app_name">asleep</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_history">History</string>
    <string name="title_relax">Relax</string>
    <string name="title_more">More</string>
    <string name="statistics">Statistics</string>
    <string name="confirm">Confirm</string>
    <string name="coffee">Coffee</string>
    <string name="disease">Disease</string>
    <string name="nose">Stuffy nose</string>
    <string name="shower">Shower</string>
    <string name="wine">Alcohol</string>
    <string name="workout">Worked out</string>
    <string name="late_dinner">Late dinner</string>
    <string name="not_my_bed">Not my bed</string>
    <string name="tired">Tired</string>
    <string name="factors">Factors</string>
    <string name="do_not_use">Do not use</string>
    <string name="start">Start</string>
    <string name="five_minutes">5 mins</string>
    <string name="ten_minutes">10 mins</string>
    <string name="twenty_minutes">20 mins</string>
    <string name="thirty_minutes">30 mins</string>
    <string name="ffive_minutes">45 mins</string>
    <string name="length">Length</string>
    <string name="sleeping_tip_text">Put your phone face down next to your bed and connect it to the charge</string>
    <string name="continue_tip">Continue</string>
    <string name="title_activity_sleeping">Sleeping</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="activate_alarm">Activate Alarm</string>
    <string name="off">Off</string>
    <string name="stop">Stop</string>
    <string name="repeat_after">Repeat after</string>
    <string name="sound">Sound</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="repeat">Repeat</string>
    <string name="minutes">minutes</string>
    <string name="long_press_to_stop">Long press to stop</string>
    <string name="monitoring_will_start_in_10_minutes">Monitoring will start in 10 minutes</string>
    <string name="monitoring_will_start">Monitoring will start in </string>
    <string name="sleep_quit_text">Monitoring should work at least 30 minutes. All reports will be deleted if you quit now. Are you sure?</string>
    <string name="title_alert">Alert</string>
    <string name="activate_anti_snore">Activate anti-snore</string>
    <string name="anti_snore_tip">The selected signal will be played when any sounds are detected. Your snoring will not be recorded if you use this feature.</string>
    <string name="signal">Signal</string>
    <string name="on">On</string>
    <string name="anti_snore">Anti-snore</string>
    <string name="duration">Duration</string>
    <string name="error">Error</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="sleep_at">Sleep at</string>
    <string name="wake_up">Wake up</string>
    <string name="sleep_time">Sleep time</string>
    <string name="noise">Noise</string>
    <string name="snore">Snore</string>
    <string name="sleep_graph">Sleep graph</string>
    <string name="audio_file_not_found">Audio file not found</string>
    <string name="downloading">Downloading</string>
    <string name="about">About</string>
    <string name="no_data">No data</string>
    <string name="no_sounds_detected">No sounds detected</string>
    <string name="sounds">Sounds</string>
    <string name="birds">Birds</string>
    <string name="nature_sounds">Nature sounds</string>
    <string name="cricket">Cricket</string>
    <string name="pink_noise">Pink noise</string>
    <string name="rain_in_a_car">Rain in a car</string>
    <string name="rain_on_the_roof">Rain on the roof</string>
    <string name="street_noise">Street noise</string>
    <string name="thunder">Thunder</string>
    <string name="water_stream">Water stream</string>
    <string name="music">Music</string>
    <string name="fan">Fan</string>
    <string name="forest">Forest</string>
    <string name="light_rain">Light rain</string>
    <string name="medium_rain">Medium rain</string>
    <string name="rain">Rain</string>
    <string name="sea_waves">Sea waves</string>
    <string name="thunder_and_wind">Thunder and wind</string>
    <string name="thunder_rain">Thunder rain</string>
    <string name="title_statistics">Statistics</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="snore_frequency">Snore frequency</string>
    <string name="year">Year</string>
    <string name="sleep_duration">Sleep duration</string>
    <string name="snore_duration">Snore duration</string>
    <string name="good_sleep">Good sleep</string>
    <string name="percentage"> \%%</string>
    <string name="bad_sleep">Bad sleep</string>
    <string name="not_enough_data">Not enough data</string>
    <string name="delete">Delete</string>
    <string name="delete_rec_text">Do you really want to delete this entry?</string>
    <string name="settings">Settings</string>
    <string name="cache">Cache</string>
    <string name="clear_music">Clear music cache</string>
    <string name="clear_snores">Clear snores cache</string>
    <string name="other">Other</string>
    <string name="more_apps">More apps</string>
    <string name="feedback">Feedback</string>
    <string name="delete_music_alert">Do you really want to delete all downloaded music? You will be able to download it again at any time.</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="delete_snores_alert">Do you really want to permanently delete all snoring records?</string>
    <string name="vibration">Vibration</string>
    <string name="smart_alarm">Smart alarm</string>
    <string name="smart_alarm_text">Alarm will be activated in a convenient sleep cycle between %1$s and %2$d</string>
    <string name="no_recordings">No recordings</string>
    <string name="this_is_demo_data">This is demo data. Track at least one dream to see your statistics.</string>
    <string name="lullaby">Lullaby</string>
    <string name="about_app">About app</string>
    <string name="credits">Music:\nhttp://www.orangefreesounds.com\nMystic Sea by Glitch | https://soundcloud.com/glitch\nMusic promoted by https://www.free-stock-music.com\nCreative Commons Attribution 3.0 Unported License\nhttps://creativecommons.org/licenses/by/3.0/deed.en_US\nLooking At The Night Sky by Glitch | https://soundcloud.com/glitch\nMusic promoted by https://www.free-stock-music.com\nCreative Commons Attribution 3.0 Unported License\nhttps://creativecommons.org/licenses/by/3.0/deed.en_US\n reNovation by airtone © copyright 2019 Licensed under a Creative Commons Attribution (3.0) license. http://dig.ccmixter.org/files/airtone/60674\nBlack to the Night (1000 Ways Mix) by SackJo22 © copyright 2019 Licensed under a Creative Commons Attribution (3.0) license. http://dig.ccmixter.org/files/SackJo22/60660 Ft: Scomber\nAutumn\'s Dream Lullaby by gurdonark © copyright 2017 Licensed under a Creative Commons Attribution license. http://dig.ccmixter.org/files/gurdonark/56524 Ft: Scomber</string>
    <string name="monitoring">Monitoring</string>
    <string name="don_t_show">Don\'t show this message again</string>
    <string name="diary">Diary</string>
    <string name="unlim_rec">Unlimited number of entries</string>
    <string name="unlim_audio">Unlimited number of audio recordings</string>
    <string name="full_music">Full access to music</string>
    <string name="full_statistics">View statistics for any time</string>
    <string name="_1_month">1 month</string>
    <string name="_3_months">3 months</string>
    <string name="subs_info">Your account will be charged the amount of the selected subscription plan. Your subscription will automatically renew within 24 hours before the end of the current period. You can cancel and manage subscriptions in your Google Play account settings.</string>
    <string name="subscribe">Subscribe</string>
    <string name="get_full">Get full access</string>
    <string name="get_all_rec">You need to subscribe to be able to create an unlimited number of records</string>
    <string name="get_all_music">You need to subscribe to get access to all music</string>
    <string name="snore_full">Only 3 entries are available for free. Subscribe to record snoring without restrictions</string>
    <string name="sub_to_delete">Subscribe to be able to delete entries</string>
    <string name="sub_stat">Subscribe to get full access to statistics</string>
    <string name="free_trial">The free trial period lasts 3 days and can only be activated once.</string>
    <string name="try_for_free">Try for free</string>
    <string name="start_sleeping_better">Start sleeping better</string>
    <string name="monitor_text">asleep will monitor your sleep, get rid of snoring and wake you up at the most optimal time</string>
    <string name="watch_changes">Watch your dream\'s changes</string>
    <string name="relax_text">The nature sounds will help you relax, get rid of stress or engage in meditation</string>
    <string name="get_started">Get Started</string>
    <string name="anti_snore_sub">Anti-snore can only be activated no more than 3 times. Subscribe to enjoy all the features without restrictions.</string>
    <string name="anti_snore_rest">Anti-snore without restrictions</string>
    <string name="no_email">There are no email clients installed.</string>
    <string name="alarm">Alarm clock</string>
    <string name="wake_up_alarm">Wake up!</string>
    <string name="charge_tip">Your device must be connected to charging so that the system does not stop the app.</string>
    <string name="lucid_dreaming_app">Lucid Dreaming app</string>
    <string name="affirmations">Affirmations</string>
    <string name="daily_affirmations_and_improving_self_esteem_for_positive_thinking">Daily affirmations and improving self-esteem for positive thinking</string>
    <string name="optimization">Your device may block notifications from being sent in the background. Please go to settings and disable app optimization.</string>
    <string name="my_other">Other apps</string>
    <string name="drink_water_reminder">Drink Water Reminder</string>
    <string name="reminder_water">Reminder to maintain water balance in the body</string>

    <string-array name="repeat_minutes">
        <item>Never</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="days_of_week">
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
        <item>sun</item>
    </string-array>
</resources>