<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorLightHint"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/alarm_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/alarm_settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/anti_snore"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/anti_snore" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorLightHint"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/subscribe"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/subscribe" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/music_cache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/clear_music" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/snore_cache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/clear_snores" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/more_apps"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/more_apps" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/feedback" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_divider"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhiteText"
                android:text="@string/about_app" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>