<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".ui.settings.snore.AntiSnoreFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anti_snore_tip"
            android:textAlignment="center"
            android:textColor="@color/colorTextHint"/>

        <Switch
            android:id="@+id/snore_switch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/card_bg"
            android:padding="10dp"
            android:text="@string/activate_anti_snore"
            android:textColor="@color/colorWhiteText"
            android:textSize="16sp" />

        <include layout="@layout/alarm_divider" />


        <LinearLayout
            android:id="@+id/sound_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal"
                android:textColor="@color/colorWhiteText"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alarm_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>