<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".ui.statistics.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textColor="@color/colorWhiteText"
                app:chipSurfaceColor="@color/colorCardChipTransparent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="@color/colorWhiteText"
                app:chipSurfaceColor="@color/colorCardChipTransparent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/colorWhiteText"
                app:chipSurfaceColor="@color/colorCardChipTransparent" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/colorWhiteText"
                app:chipSurfaceColor="@color/colorCardChipTransparent" />

        </com.google.android.flexbox.FlexboxLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/rec_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background_gradient"
                android:padding="10dp">

                <TextView
                    android:id="@+id/snore_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/snore_frequency"
                    android:textColor="@color/colorWhiteText"
                    android:textSize="21sp" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/frequency_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@id/snore_frequency" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background_gradient"
                android:padding="10dp">

                <TextView
                    android:id="@+id/sleep_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/sleep_duration"
                    android:textColor="@color/colorWhiteText"
                    android:textSize="21sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/duration_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@id/sleep_duration" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background_gradient"
                android:padding="10dp">

                <TextView
                    android:id="@+id/snore_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/snore_duration"
                    android:textColor="@color/colorWhiteText"
                    android:textSize="21sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/snore_duration_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@id/snore_duration" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background_gradient"
                android:padding="10dp">

                <TextView
                    android:id="@+id/good_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical"
                    android:text="@string/good_sleep"
                    android:textColor="@color/colorWhiteText"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/good_recycler"
                    android:layout_below="@id/good_sleep"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>